--- a/softryzen/src/components/App/App.module.scss
+++ b/softryzen/src/components/App/App.module.scss
@@ -4,6 +4,22 @@
 }
 
 .wrapper{
-    background-image: url("../../images/hero/hero-phone.jpg");
-     height: 533px;
+width: 320px;
+    height: 533px;
+    background-image:  url('../../images/home/showcase.webp' ),url('../../images/home/showcase.jpg'),;
+    height: 533px;
+    background-color: rgba(0,0,0,0.4);
+    background-position: 50% 50%;
+    background-size: cover;
+   
+    
+    
+}
+
+
+
+@media (min-resolution: 2dppx){
+    .wrapper{
+        background-image: url('../../images/home/showcase@2x.jpg'),url('../../images/home/showcase@2x.webp');
+    }
 }
