--- a/src/components/App/App.module.scss
+++ b/src/components/App/App.module.scss
@@ -1,21 +1,47 @@
+
 .containerWrapper {
+  margin-left: auto;
+  margin-right: auto;
   width: 320px;
+  
+
+  @media screen and (min-width: 768px) {
+    width: 768px;
+  }
+   @media screen and (min-width: 1360px) {
+    width: 1360px;
+  }
 }
 
 .wrapper {
   width: 320px;
   height: 533px;
-  background-image: url("../../images/home/showcase.webp"),
+  background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
+    url("../../images/home/showcase.webp"),
     url("../../images/home/showcase.jpg");
-  height: 533px;
   background-color: rgba(0, 0, 0, 0.4);
   background-position: 50% 50%;
   background-size: cover;
-}
 
-@media (min-resolution: 2dppx) {
-  .wrapper {
-    background-image: url("../../images/home/showcase@2x.jpg"),
-      url("../../images/home/showcase@2x.webp");
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    background-image: linear-gradient(
+        to right,
+        rgba(0, 0, 0, 0.4),
+        rgba(0, 0, 0, 0.4)
+      ),
+      url("../../images/home/showcase@2x.webp"),
+      url("../../images/home/showcase@2x.jpg");
   }
+  @media screen and (min-width: 768px) {
+    width: 768px;
+    height: 1024px;
+    
+  }
+ @media screen and (min-width: 1360px) {
+    width: 1360px;
+    height: 768px;
+  }
+
 }
