--- a/src/components/section-blog/section-blog.module.scss
+++ b/src/components/section-blog/section-blog.module.scss
@@ -1,12 +1,34 @@
 @import "../../styles/default/variables";
 
-
-.blogWrapper{
-    margin-top: 40px;
+.blogWrapper {
+  @media screen and (min-width: 768px) {
+    position: relative;
+    display: flex;
+    height: 493px;
+  }
+  @media screen and (min-width: 1360px) {
+    position: relative;
+    display: flex;
+    height: 460px;
+  }
 }
 .post {
-    padding: 48px 20px 58px 20px;
+  padding: 48px 20px 58px 20px;
   background-color: $blog-main-color;
+  @media screen and (min-width: 768px) {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 336px;
+    height: 375px;
+    padding: 59px 32px 59px 32px;
+  }
+  @media screen and (min-width: 1360px) {
+     width: 642px;
+    height: 300px;
+    padding: 80px 20px 80px 28px;
+    }
+
   &__date {
     font-family: "Open Sans";
     font-style: normal;
@@ -14,8 +36,12 @@
     font-size: 16px;
     line-height: 22px;
     color: $main-font-color;
+    @media screen and (min-width: 768px) {
+      font-size: 18px;
+      line-height: 25px;
+    }
   }
-  
+
   h2 {
     margin-top: 16px;
     margin-bottom: 24px;
@@ -25,20 +51,30 @@
     font-size: 32px;
     line-height: 44px;
     color: $main-font-color;
+    @media screen and (min-width: 768px) {
+      font-size: 40px;
+      line-height: 54px;
+    }
   }
-   &__description {
-    margin-bottom: 40px;
+  &__description {
+    margin-bottom: 24px;
     font-family: "Open Sans";
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
     line-height: 22px;
     color: $main-font-color;
+    @media screen and (min-width: 768px) {
+      font-size: 18px;
+      line-height: 25px;
+    }
   }
-  button {
+  
+}
+.blogButton {
     width: 172px;
-    height: 54px;
-    padding: 16px 31px 16px 32px;
+    height: 57px;
+    padding: 16px 31px 16px 30px;
     font-family: "Open Sans";
     font-style: normal;
     font-weight: 400;
@@ -46,17 +82,29 @@
     line-height: 22px;
     color: $main-font-color;
     background-color: transparent;
-    border: 1px solid  $main-font-color;
+    border: 1px solid $main-font-color;
     border-radius: 5px;
 
     &:hover,
-    &:focus{
-       background-color:  $main-font-color;
-       color: $blog-main-color;
-       border: 1px solid  $blog-main-color;
+    &:focus {
+      background-color: $main-font-color;
+      color: $blog-main-color;
+      border: 1px solid $blog-main-color;
     }
   }
-}
-.pictureBlog{
-    background-color:$blog-main-color ;
+.pictureBlog {
+  background-color: $blog-main-color;
+  @media screen and (min-width: 768px) {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 368px;
+    height: 100%;
+    background-color: $blog-main-color;
+    object-fit: cover;
   }
+  @media screen and (min-width: 1360px) {
+     width: 670px;
+
+    }
+}
