--- a/src/components/section-business-cases/section-business-cases.module.scss
+++ b/src/components/section-business-cases/section-business-cases.module.scss
@@ -8,8 +8,22 @@
   width: 280px;
   padding-left: 20px;
   padding-right: 20px;
+  padding-bottom: 40px;
 
-
+  @media screen and (min-width: 768px) {
+    width: 704px;
+    padding-top: 48px;
+    padding-left: 32px;
+    padding-right: 32px;
+    padding-bottom: 40px;
+  }
+  @media screen and (min-width: 1360px) {
+    width: 1306px;
+    padding-top: 48px;
+    padding-left: 28px;
+    padding-right: 28px;
+    padding-bottom: 80px;
+  }
 
   .title {
     margin-bottom: 16px;
@@ -29,6 +43,19 @@
     font-size: 32px;
     line-height: 44px;
     color: $secondary-text-color;
+    @media screen and (min-width: 768px) {
+      width: 284px;
+      margin-left: 210px;
+      font-family: "Open Sans";
+      font-style: normal;
+      font-weight: 400;
+      font-size: 40px;
+      line-height: 54px;
+      text-align: center;
+    }
+    @media screen and (min-width: 1360px) {
+      margin-left: 510px;
+    }
   }
   .text {
     margin-top: 24px;
@@ -39,12 +66,45 @@
     font-size: 16px;
     line-height: 22px;
     color: $secondary-text-color;
+    @media screen and (min-width: 768px) {
+    }
   }
 }
 
 .imgItem:not(:last-child) {
   margin-bottom: 8px;
+  font-size: 18px;
+  line-height: 25px;
 }
 
+.imgWrapper {
+  @media screen and (min-width: 768px) {
+    display: grid;
 
+    grid-template-columns: repeat(3, 1fr);
+    gap: 18px;
+  }
+  @media screen and (min-width: 1360px) {
+     grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    }
 
+}
+
+.picture {
+  @media screen and (min-width: 768px) {
+    width: 100%;
+    height: 100%;
+  }
+}
+
+.imgItem {
+  @media screen and (min-width: 768px) {
+    width: 223px;
+    height: 148px;
+    @media screen and (min-width: 1360px) {
+      width: 421px;
+      height: 282px;
+    }
+  }
+}
