--- a/src/components/section-callback/section-callback.module.scss
+++ b/src/components/section-callback/section-callback.module.scss
@@ -1,16 +1,66 @@
 @import "../../styles/default/variables";
 
-.callbackWrapper{
-    padding: 51px  25px 20px;
-    background-color: #F4F4F4;;
-    h2{
-        width: 280px;
-        margin-bottom: 69px;
-        font-family: 'Open Sans';
-font-style: normal;
-font-weight: 400;
-font-size: 32px;
-line-height: 48px;
-color: $secondary-text-color;
+.sectionCallback {
+  @media screen and (min-width: 768px) {
+    display: flex;
+    height: 354px;
+    width: 768px;
+    margin-bottom: 40px;
+  }
+  @media screen and (min-width: 1360px) {
+    display: flex;
+    height: 454px;
+    width: 1360px;
+     margin-bottom: 0px;
+   
+  }
+}
+
+.callbackWrapper {
+  padding: 51px 20px 25px 20px;
+  background-color: #f4f4f4;
+  @media screen and (min-width: 768px) {
+    padding: 32px;
+  }
+  @media screen and (min-width: 1360px) {
+    padding: 56px 28px 77px 28px;
+  }
+
+  h2 {
+    width: 280px;
+    margin-bottom: 69px;
+    font-family: "Open Sans";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 32px;
+    line-height: 48px;
+    color: $secondary-text-color;
+    @media screen and (min-width: 768px) {
+        width: 317px;
+      font-size: 40px;
+      line-height: 54px;
+      margin-bottom: 24px;
     }
+    @media screen and (min-width: 768px) {
+      margin-bottom: 31px;
+    }
+  }
+}
+
+.imgWrapper {
+  @media screen and (min-width: 768px) {
+    width: 368px;
+    height: 100%;
+  }
+  @media screen and (min-width: 1360px) {
+    
+    width: 670px;
+    height: 100%;
+   ;
+  }
+}
+.picture {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
