--- a/src/components/section-footer/section-footer.module.scss
+++ b/src/components/section-footer/section-footer.module.scss
@@ -1,19 +1,37 @@
 @import "../../styles/default/variables";
 
 .footer {
+  display: flex;
+  flex-wrap: wrap;
+  width: 320px;
   height: 69px;
   padding-top: 20px;
   padding-bottom: 20px;
   background-color: $secondary-text-color;
-  display: flex;
-  flex-wrap: wrap;
   justify-content: center;
+   @media screen and (min-width: 768px) {
+    display: grid;
+    width: 768px;
+  
+    
+  }
+  @media screen and (min-width: 1360px) {
+    display: grid;
+    width: 1360px;
+  
+    
+  }
  
   
 }
 .iconsWrapper {
   display: flex;
   align-items: center;
+  @media screen and (min-width: 768px) {
+    
+  margin-left: 18px;
+    
+  }
 }
 
 .iconItem:not(:last-child) {
@@ -37,4 +55,5 @@
     font-size: 16px;
     line-height: 22px;
     color: $main-font-color;
+    
   }
