--- a/src/components/section-hero/section-hero.module.scss
+++ b/src/components/section-hero/section-hero.module.scss
@@ -1,23 +1,47 @@
 @import "../../styles/default/variables";
 
+
 .hero {
   width: 280px;
   padding-left: 20px;
   padding-right: 20px;
-  justify-content: center;
-  align-items: center;
+   @media screen and (min-width: 768px) {
+    width: 524px;
+   padding-left: 122px;
+   padding-right: 122px;
+  }
+  @media screen and (min-width: 1360px) {
+    width: 800px;
+   padding-left: 280px;
+   padding-right: 280px;
+  }
 
   &__title {
     width: 241px;
     margin-left: 20px;
     text-align: center;
-    margin-top: 62px;
+    margin-top: 59px;
     font-family: "Open Sans";
     font-style: normal;
     font-weight: 600;
     font-size: 40px;
     line-height: 54px;
     color: $main-font-color;
+    @media screen and (min-width: 768px) {
+      width: 523px;
+      margin-top: 325px;
+     
+      font-family: "Open Sans";
+      font-style: normal;
+      font-weight: 600;
+      font-size: 55px;
+    }
+
+    @media screen and (min-width: 1360px) {
+    margin-left: 138px;
+    margin-top: 192px;
+    }
+    
   }
 
   &__tagline {
@@ -30,9 +54,30 @@
     font-size: 26px;
     line-height: 32px;
     color: $main-font-color;
+    @media screen and (min-width: 768px) {
+      width: 523px;
+      
+      font-family: "Open Sans";
+      font-style: normal;
+      font-weight: 400;
+      font-size: 40px;
+      line-height: 48px;
+    }
+    @media screen and (min-width: 1360px) {
+    width: 799px;
+    line-height: 54px;
+    }
   }
 
   &__button {
+      margin-top: 0px;
+  margin-right: 0px;
     margin-left: 53px;
+     @media screen and (min-width: 768px) {
+    margin-left: 174px;
+    }
+     @media screen and (min-width: 1360px) {
+    margin-left: 312px;
+    }
   }
 }
