--- a/src/components/section-team/section-team.module.scss
+++ b/src/components/section-team/section-team.module.scss
@@ -2,10 +2,20 @@
 
 .sectionTeam {
   width: 280px;
-  padding: 72px 20px 25px 20px;
+  padding: 72px 20px 50px 20px;
   display: grid;
   justify-content: center;
   text-align: center;
+
+  @media screen and (min-width: 768px) {
+    padding: 50px 32px 40px 32px;
+    width: 704px;
+  }
+   @media screen and (min-width: 1360px) {
+    padding: 80px 28px 88px 28px;
+    width: 1304px;
+
+  }
 
   &__title {
     font-family: "Open Sans";
@@ -14,6 +24,10 @@
     font-size: 16px;
     line-height: 22px;
     color: $secondary-text-color;
+    @media screen and (min-width: 768px) {
+      font-size: 20px;
+      line-height: 33px;
+    }
   }
   h2 {
     margin-top: 16px;
@@ -25,6 +39,10 @@
     line-height: 44px;
     text-align: center;
     color: $secondary-text-color;
+    @media screen and (min-width: 768px) {
+      font-size: 40px;
+      line-height: 54px;
+    }
   }
   &__description {
     margin-bottom: 63px;
@@ -35,6 +53,11 @@
     line-height: 22px;
     text-align: center;
     color: $secondary-text-color;
+    @media screen and (min-width: 768px) {
+      margin-bottom: 24px;
+      font-size: 18px;
+      line-height: 25px;
+    }
   }
   &__name {
     margin-top: 16px;
@@ -45,14 +68,97 @@
     font-size: 20px;
     line-height: 27px;
     color: $secondary-text-color;
+     @media screen and (min-width: 768px) {
+    font-size: 32px;
+line-height: 32px;
+  }
   }
   &__role {
-    margin-bottom: 50px;
+    font-family: "Open Sans";
+    margin-bottom: 30px;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 22px;
+    color: $secondary-text-color;
+    @media screen and (min-width: 768px) {
+   font-size: 18px;
+line-height: 25px;
+  }
+  }
+  &__roleMarketing{
     font-family: "Open Sans";
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
     line-height: 22px;
     color: $secondary-text-color;
+    @media screen and (min-width: 768px) {
+    font-size: 18px;
+line-height: 25px;
+  }
+  }
+}
+
+.imgWrapper {
+  position: relative;
+  transition: transform 0.2s ease-in-out;
+
+  &:hover,
+  &:focus-within {
+    transform: scale(1.02);
+    box-shadow: 0 0 16px rgba(0, 0, 0, 0.8);
+  }
+}
+.socialLinks {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  gap: 25px;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.25);
+  opacity: 0;
+  transition: opacity 0.2s ease-in-out;
+  &:focus-within {
+    opacity: 1;
+  }
+  .imgWrapper:hover &,
+  .imgWrapper:focus & {
+    opacity: 1;
+  }
+}
+
+.socialLinks__link {
+  & svg {
+    transition: opacity 0.2s ease-in-out;
+  }
+  &:hover,
+  &:focus {
+    & svg {
+      opacity: 0.8;
+    }
+  }
+}
+.teamItems {
+  @media screen and (min-width: 768px) {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 17px;
+  }
+   @media screen and (min-width: 1360px) {
+    gap:20px;
+  }
+}
+
+.picture {
+  @media screen and (min-width: 768px) {
+    width: 223px;
+  }
+  @media screen and (min-width: 1360px) {
+    width:420px;
   }
 }
