--- a/src/components/section-header/section-header.module.scss
+++ b/src/components/section-header/section-header.module.scss
@@ -1,13 +1,21 @@
 @import "../../styles/default/variables";
 
 .header {
-  padding: 16px 32px 0px 32px;
+  padding: 22px 22px 0px 22px;
+  height: 98px;
+  width: 256px;
   @media screen and (min-width: 768px) {
     display: flex;
-    
+    align-items:flex-start;
+    padding: 16px 32px 0px 32px;
+    height: 104px;
+    width: 704px;
     
   }
    @media screen and (min-width: 1360px) {
+    display: flex;
+    width: 1303px;
+    height: 48px;
     padding: 32px 29px 0px 28px;
   }
 
@@ -27,8 +35,6 @@
 
 .logo {
   display: flex;
-  align-items: center;
-  align-items: center;
   margin-bottom: 16px;
   font-family: "Open Sans";
   font-style: normal;
@@ -47,6 +53,12 @@
     font-weight: 400;
     font-size: 35px;
     line-height: 48px;
+    margin-bottom: 0px;
+  }
+  @media screen and (min-width: 768px) {
+ display: flex;
+ align-items: center;
+
   }
 }
 
